hphp/hack/test/typecheck/higher_kinded_types/simple_kinds_misc_good2.php.exp
File "simple_kinds_misc_good2.php", line 9, characters 14-15:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
  File "simple_kinds_misc_good2.php", line 3, characters 6-7:
  Definition is here
